support optimisation param generation for enums and strings & validate